@@ -73,4 +73,10 @@
 #define GNOME_KEY_NAME_PRINT_SETUP    'P'
 #define GNOME_KEY_MOD_PRINT_SETUP     (GDK_CONTROL_MASK||GDK_SHIFT_MASK)
 
+#define GNOME_KEY_NAME_FIND     'F'
+#define GNOME_KEY_MOD_FIND      (GDK_CONTROL_MASK)
+
+#define GNOME_KEY_NAME_REPLACE  'F'
+#define GNOME_KEY_MOD_REPLACE   (GDK_CONTROL_MASK||GDK_SHIFT_MASK)
+
 #endif
